[package]
name = "sin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
const_soft_float = { version = "0.1.4", features = [] }
cpal = { version = "0.15.2", features = [] }
dasp = { version = "0.11.0", features = [
  "peak",
  "signal",
  "envelope",
  "envelope-peak",
  "signal-envelope",
] }
rodio = "0.17.1"
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
